# conan-xmpsdk

./: .gitignore  .travis.yml  FindXmpSdk.cmake  MD5.patch  README.md  appveyor.yml  build.py  conanfile.py  vim.exe.stackdump
CMake/: CMakeLists.txt
CMake/XMPCore/: CMakeLists.txt
CMake/cmake/: ProductConfig.cmake  SharedConfig.cmake  SharedConfig_Common.cmake  SharedConfig_Ios.cmake  SharedConfig_Linux.cmake  SharedConfig_Mac.cmake  SharedConfig_Win.cmake  XMP_Config.cmake  XMP_ConfigCommon.cmake
test_package/: CMakeLists.txt  conanfile.py  example.cpp
